--- a/styles/estiloMainPage.css
+++ b/styles/estiloMainPage.css
@@ -103,6 +103,7 @@ nav li {
     font-size: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     align-items: center;
+    color: white;
 }
 
 nav li:hover {
