--- a/styles/estiloMainPage.css
+++ b/styles/estiloMainPage.css
@@ -53,7 +53,7 @@ body {
 
 footer {
     background-color: #678cf8;
-    padding-top: 20px;
+    padding-top: 15px;
 }
 
 /* Header */
@@ -277,21 +277,21 @@ h3 {
 }
 
 .content-section img {
-    width: 150px;
+    width: 350px;
     height: auto;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
 .content-section.reverse img {
-    width: 150px;
+    width: 350px;
     height: auto;
-    margin-right: 0;
-    margin-left: 20px;
+    margin-right: 0px;
 }
 
 .content-text {
     max-width: 500px;
     text-align: left;
+    margin-right: 50px;
 }
 
 .content-title {
@@ -304,23 +304,62 @@ h3 {
     margin-bottom: 7px;
 }
 
+.separateCategories {
+    width: 90%;
+    border: none;
+    height: 1px;
+    background-color: rgb(89, 138, 245);
+    margin: 50px auto;
+}
+
+/* Div que contiene las tecnologias utilizadas */
 #hechoConDiv {
-    padding-top: 20px;
-    padding-bottom: 50px;
+    padding-top: 60px;
+    padding-bottom: 10px;
     display: flex;
     gap: 30px;
     justify-content: center;
     align-items: center;
 }
 
-#hechoConDiv img {
-    height: auto;
-    width: 150px;
+/* Estilos para la imagen y el contenedor */
+.image-container {
+    display: flex;
+    gap: 20px;
 }
 
-#hechoConDiv img {
+/* Contenedor individual de cada imagen y su tooltip */
+.image-item {
+    position: relative;
+    display: inline-block;
+}
+
+/* Imagen dentro del contenedor */
+.image {
+    width: 125px;
     height: auto;
-    width: 150px;
+    cursor: pointer;
+}
+
+/* Tooltip (texto que aparece al pasar el cursor) */
+.tooltip {
+    visibility: hidden;
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    font-size: 14px;
+    white-space: nowrap;
+    z-index: 10;
+}
+
+/* Mostrar el texto al pasar el cursor sobre la imagen */
+.image-item:hover .tooltip {
+    visibility: visible;
 }
 
 /* Footer */
@@ -350,7 +389,13 @@ footer p {
 }
 
 footer hr {
-    margin-top: 20px;
-    margin-bottom: 15px;
-    border: 1px solid black;
+    margin: 10px 0;
+    width: 200px;
+    border: none;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
+
+/*pruebas*/
+
+
