--- a/styles/estiloMainPage.css
+++ b/styles/estiloMainPage.css
@@ -399,3 +399,65 @@ footer hr {
     height: 1px;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+/* pruebas */
+
+/*
+    From Uiverse.io by Yaya12085
+    Link: https://uiverse.io/Yaya12085/old-lionfish-77
+*/
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 7px;
+    border: none;
+    background: #0ba360;
+    background: linear-gradient(
+      to right,
+      #0271e7,#208afc
+    );
+    color: white;
+    font-family: inherit;
+    text-align: center;
+    font-size: 13px;
+    box-shadow: 0px 14px 56px -11px #0259b6;
+    width: 11em;
+    padding: 0.7em;
+    transition: all 0.4s;
+    cursor: pointer;
+  }
+  
+  .button svg {
+    width: 25px;
+    height: 25px;
+  }
+  
+  .button svg path {
+    fill: white
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.4s;
+  }
+  
+  .button span:after {
+    content: 'for free';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.7s;
+  }
+  
+  .button:hover span {
+    padding-right: 3.80em;
+  }
+  
+  .button:hover span:after {
+    opacity: 4;
+    right: 0;
+  }
