--- a/styles/estiloMainPage.css
+++ b/styles/estiloMainPage.css
@@ -400,6 +400,17 @@ footer hr {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+#redesSocialesFooter i {
+    margin-right: 10px;
+    font-size: 25px;
+    margin-bottom: 10px;
+    color: black;
+}
+
+#redesSocialesFooter i:hover {
+    transform: translateY(-3px);
+}
+
 /* pruebas */
 
 /*
