--- a/styles/estiloMainPage.css
+++ b/styles/estiloMainPage.css
@@ -44,7 +44,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Fredoka;
+    font-family: Fredoka !important;
 }
 
 a {
@@ -67,37 +67,49 @@ footer {
 }
 
 /* Header */
+#header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px;
+    z-index: 1001;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 60px;
+}
+
+#logo-container {
+    flex-shrink: 0;
+    display: flex;
+    z-index: 1002;
+    margin-right: 20px;
+}
+
+#logo-container img {
+    max-width: 100%;
+    height: auto;
+    max-height: 50px;
+    margin-left: 5px;
+}
+
 nav {
     display: flex;
     background-color: rgba(255, 255, 255, 0.3);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     padding: 20px 30px;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     position: fixed;
     top: 0;
     width: 100%;
+    max-width: 100%;
+    overflow: hidden;
     z-index: 1000;
     box-sizing: border-box;
 }
 
- /* Logo */
-#logo {
-    display: flex;
-    align-items: center;
-    margin-right: auto;
-    height: 40px;
-    overflow: hidden;
-    position: relative;
-}
-
-#logoNormal {
-    height: 100%;
-    width: auto;
-}
-
-/* NAVEGACION */
 nav ul {
     display: flex;
     list-style: none;
@@ -117,12 +129,7 @@ nav li {
 }
 
 nav li:hover {
-    color: #03a3ff;
-}
-
-nav li:first-child {
-    margin-right: 0;
-    transform: none;
+    color: #03a3ff !important;
 }
 
 nav li:last-child {
@@ -135,7 +142,8 @@ nav li a {
     text-decoration: none;
 }
 
- /* Bandera */
+
+/* Bandera */
 
 .flag-container {
     display: flex;
@@ -176,6 +184,8 @@ nav li a {
 
  /* Texto de la versión del juego */
 #versionJuego {
+    font-family: Fredoka !important;
+    font-weight: bold !important;
     text-align: center;
     white-space: nowrap;
     font-size: 3rem;
@@ -267,13 +277,17 @@ nav li a {
     color: white;
     padding-top: 30px;
     margin-bottom: 20px;
-    font-family: PokemonGB;
+    font-family: PokemonGB !important;
+    font-weight: bold;
+    font-size: 25px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: center;
 }
 
 h3 {
-    font-family: PressStart2P;
+    font-family: PressStart2P !important;
+    font-weight: bold;
+    font-size: 20px !important;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: center;
 }
@@ -425,8 +439,6 @@ footer hr {
     transform: translateY(-3px);
 }
 
-/* pruebas */
-
 /*
     From Uiverse.io by Yaya12085
     Link: https://uiverse.io/Yaya12085/old-lionfish-77
@@ -486,3 +498,89 @@ footer hr {
     opacity: 4;
     right: 0;
   }
+
+/*  //////////////////////////////////////////////////////////////////////// */
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    div#logo-container {
+        display: block;
+        width: 100%;
+        margin: 0;
+        padding: 20px 0;
+    }
+
+    div#logo-container img {
+        display: block;
+        margin: 0 auto;
+    }
+
+    nav {
+        display: flex;
+        gap: 1rem !important;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+        padding: 0;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    nav ul {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    nav li {
+        font-size: 13px;
+        margin-right: 0;
+    }
+
+    .content-section {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    div.video iframe {
+        width: 100%;
+    }
+
+    .content-section img {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .content-text {
+        margin-right: 0;
+    }
+
+    #segundoRectangulo {
+        width: 100% !important;
+    }
+
+    #versionJuego {
+        font-size: 2rem;
+    }
+}
+
+/* Ajustes para 360x740 */
+@media (max-width: 360px) {
+    #versionJuego {
+        font-size: 1.8rem;
+        margin-bottom: 10px;
+    }
+
+    .button {
+        width: 8em;
+        font-size: 12px;
+    }
+
+    .content-section img {
+        max-width: 300px;
+        margin-bottom: 15px;
+    }
+
+    #segundoRectangulo {
+        padding: 20px 10px;
+    }
+}
