--- a/styles/estiloUpdates.css
+++ b/styles/estiloUpdates.css
@@ -55,12 +55,24 @@ div#secondPage {
 }
 
 details summary {
+    display: flex;
     color: #478CBF;
     font-weight: bold;
     font-size: 1.25rem;
     padding: 1rem;
     cursor: pointer;
     list-style: none;
+    padding: 1rem;
+    font-weight: bold;
+    color: #478CBF;
+    font-size: 1.25rem;
+}
+
+/* El ícono */
+details summary i {
+    font-size: 1rem;
+    margin-left: auto;
+    transition: transform 0.3s ease;
 }
 
 details p {
