--- a/styles/estiloUpdates.css
+++ b/styles/estiloUpdates.css
@@ -83,3 +83,35 @@ details p {
 details:hover,details[open] {
     box-shadow: 5px 5px 15px #d9d9d9;
 }
+
+/* Reglas responsive */
+
+@media (max-width: 768px) {
+
+    #firstPage h1 { 
+        font-size: 2.5rem;
+    }
+
+    #firstPage {
+        height: 35vh;
+    }
+
+    #secondPage {
+        width: 100%;
+        margin-left: 0%;
+    }
+
+    #secondPage h2 {
+        margin-left: 5%;
+    }
+
+    .update {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    details summary i {
+        align-content: center;
+    }
+
+}
