--- a/styles/estiloFAQ.css
+++ b/styles/estiloFAQ.css
@@ -42,6 +42,15 @@
     flex-direction: column;
 }
 
+#secondPage img {
+    max-width: 400px;
+    height: auto;
+    margin-left: 20px;
+    margin-right: 60px;
+    flex-shrink: 0;
+    align-self: center;
+}
+
 #secondPage h2 {
     margin-left: 13.5%;
     margin-bottom: 10px;
@@ -68,4 +77,28 @@
 }
 
 
-/* Third page */
+/* RESPONSIVE */
+
+@media screen and (max-width: 768px) {
+    #secondPage h2 {
+        margin-left: 10%;
+        margin-bottom: 10px;
+        margin-top: 15px;
+    }
+
+    #secondPage p {
+        margin-left: 10%;
+        margin-right: 5%;
+    }
+
+    #secondPage {
+        flex-direction: column;  /* Coloca los elementos en columna en móviles */
+    }
+
+    #secondPage img {
+        margin-left: 0;  /* Elimina márgenes laterales para centrar la imagen */
+        margin-right: 0;
+        align-self: center;  /* Asegura que la imagen se centre */
+        margin-top: 20px;  /* Opcional, agrega espacio superior para separación */
+    }
+}
