--- a/styles/estiloUpdates.css
+++ b/styles/estiloUpdates.css
@@ -54,6 +54,22 @@ div#secondPage {
     margin-bottom: 20px;
 }
 
+.github-link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    list-style: none;
+}
+
+.github-link a {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+    color: inherit;
+    padding: 0.25rem 0;
+}
+
 details summary {
     display: flex;
     color: #478CBF;
@@ -82,4 +98,8 @@ details p {
 
 details:hover,details[open] {
     box-shadow: 5px 5px 15px #d9d9d9;
+}
+
+.update-item {
+    margin-left: 17px; /* Ajusta según necesites */
 }
