--- a/styles/estiloMainPage.css
+++ b/styles/estiloMainPage.css
@@ -576,19 +576,16 @@ footer hr {
         width: 90%;
         max-width: 680px;
         margin: 0 auto;
-        position: relative;
-        overflow: hidden;
         aspect-ratio: 16 / 9;
+        overflow: hidden;
     }
     
     .video iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
         border: none;
-        padding: 15px;
+        padding: 0;
+        display: block;
     }
 
     footer p {
